Less silly random example

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 ### Redacting prefab plaintext
 
 # pOTP >>>
-[[None, None, None, None], [None, None, None, 'mD4Sa5hk', '2Sz0']]
+[['ElQpAS8v', None, 'u00NLPA=', 'jJgkj/w='], [None, None, 'iA==', None, '9kHo']]
 # >>> Unredaction
-██████ ███ █████ █████
-████████ ██ █ second one
+Here's ███ first line,
+████████ ██ a ██████ one
 
 # pOTP >>>
-[['M83DT43U', 'sLdj', 'nhhdnNA=', 'KGaTVmY='], ['63UpKI/wdSE=', 'l1Q=', 'tg==', None, None]]
+[[None, '8HvL', None, None], ['kUbc53cUs/s=', 'U/w=', None, 'WtAU4/tV', None]]
 # >>> Unredaction
-Here's the first line,
-followed by a ██████ ███
+██████ the █████ █████
+followed by █ second ███
 
 ### >>> integration >>>
 Here's the first line,
