--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html><html lang="en"><head><title>Testing DarkenedAges library</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /></head><body><pre>
-### Redacting prefab plaintext
+### Players
+
+# Sandy Claws (sandyclaws,@sandyclaws):
+  From the Magic Tuna Show (ask your kids).
+
+# Rabbi Yoav (broyo,@thedod):
+  Confession sensor technician (CST) and ChurchApproved Rabbi (CAR)
+  [technically, a priest] in the Geneva parish. Born 2061 in Kibbutz
+  Tzofna [burnt down during the 2067 reforms]. Graduated Ofakim Yeshiva
+  (a ChurchApproved institute) 2085. Level 17 communism indicators
+  (mainly due to family and origin). 77% heterosexual. No other known
+  dominant deviatoins.
+
+# Forth Inc. (forth,@forth):
+  Registered ████████.
+
+# Daan II (daanii,@black_puppydog):
+  ██ ███ ███████ of ██████.
+
+
+### Simulating a random selection of 3 trustees for msgid #DA14341720253787
+['daanii', 'forth', 'broyo']
+
+
+### Redacting prefab plaintext (2 trustees)
 
 # pOTP >>>
-[['ElQpAS8v', None, 'u00NLPA=', 'jJgkj/w='], [None, None, 'iA==', None, '9kHo']]
+[[None, None, None, 'lkwXFnI='], ['RZbLFdmBs6I=', None, 'Yw==', None, '40cX']]
 # >>> Unredaction
-Here's ███ first line,
-████████ ██ a ██████ one
+██████ ███ █████ line,
+followed ██ a ██████ one
 
 # pOTP >>>
-[[None, '8HvL', None, None], ['kUbc53cUs/s=', 'U/w=', None, 'WtAU4/tV', None]]
+[['Fa/b2OSk', 'ldGy', 'lofC2bA=', None], [None, 'wIc=', None, 'p4kCjP/a', None]]
 # >>> Unredaction
-██████ the █████ █████
-followed by █ second ███
+Here's the first █████
+████████ by █ second ███
 
 ### >>> integration >>>
 Here's the first line,
