Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
         <p><img src="https://i.imgur.com/WfhHOX0.jpg" alt="Trust ██ like █████. Be ███████."></p>
 
 <h1>
-<a id="this-is-still-under-heavy-construction" class="anchor" href="#this-is-still-under-heavy-construction" aria-hidden="true"><span class="octicon octicon-link"></span></a>This is still under heavy construction</h1>
+<a id="this-is-still-under-heavy-construction-meanwile" class="anchor" href="#this-is-still-under-heavy-construction-meanwile" aria-hidden="true"><span class="octicon octicon-link"></span></a>This is still under heavy construction. Meanwile:</h1>
 
-<p>Best is to see the <a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a>.</p>
+<ul>
+<li>
+<a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a>.</li>
+<li>See player list (and some examples of redactions etc.) <a href="https://raw.githubusercontent.com/Knights-of-Redact/DarkenedAges/master/output.txt">here</a>.</li>
+<li>For public moves and gossip, see <a href="https://twisterio.com/search?kw=%23darkenedages">#DarkenedAges</a> on <a href="http://twister.net.co">twister</a>.</li>
+</ul>
 
 <blockquote>
 <p>It ain't home, but it's much</p>
