--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
         <p><img src="https://i.imgur.com/WfhHOX0.jpg" alt="Trust ██ like █████. Be ███████."></p>
 
 <h1>
-<a id="this-is-still-under-heavy-construction-meanwile" class="anchor" href="#this-is-still-under-heavy-construction-meanwile" aria-hidden="true"><span class="octicon octicon-link"></span></a>This is still under heavy construction. Meanwile:</h1>
+<a id="weve-reached-critical-mass-5-players-o" class="anchor" href="#weve-reached-critical-mass-5-players-o" aria-hidden="true"><span class="octicon octicon-link"></span></a>We've reached critical mass (5 players) \o/</h1>
 
 <ul>
 <li>
-<a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a>.</li>
+<em>[Until we have a decent wiki,]</em> <a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a> 
+contains most "known documentation".</li>
 <li>See player list (and some examples of redactions etc.) <a href="https://raw.githubusercontent.com/Knights-of-Redact/DarkenedAges/master/output.txt">here</a>.</li>
 <li>For public moves and gossip, see <a href="https://twisterio.com/search?kw=%23darkenedages">#DarkenedAges</a> on <a href="http://twister.net.co">twister</a>.</li>
 </ul>
