Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,10 +48,21 @@
       <section id="main_content">
         <p><img src="https://i.imgur.com/WfhHOX0.jpg" alt="Trust ██ like █████. Be ███████."></p>
 
-<h1>
-<a id="weve-reached-critical-mass-5-players-o" class="anchor" href="#weve-reached-critical-mass-5-players-o" aria-hidden="true"><span class="octicon octicon-link"></span></a>We've reached critical mass (5 players) \o/</h1>
+<h3>
+<a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h3>
 
 <ul>
+<li>Pull, and you can <a href="https://github.com/Knights-of-Redact/DarkenedAges#unredacting-a-message">run</a>
+<code>./unredact.py</code> without arguments for a summary of your darkive.</li>
+<li>We're in rehearsal mode now, and <a href="https://twisterio.com/post/thedod/1960">this</a> was the first move.</li>
+<li>We've reached critical mass (5 players) \o/</li>
+</ul>
+
+<h3>
+<a id="in-general" class="anchor" href="#in-general" aria-hidden="true"><span class="octicon octicon-link"></span></a>In general</h3>
+
+<ul>
+<li>Problems? Questions? DM <code>@darkenedages</code> on <a href="http://twister.net.co">Twister</a>.</li>
 <li>
 <em>[Until we have a decent wiki,]</em> <a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a> 
 contains most "known documentation".</li>
