--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
 <a id="in-general" class="anchor" href="#in-general" aria-hidden="true"><span class="octicon octicon-link"></span></a>In general</h3>
 
 <ul>
-<li>Problems? Questions? DM <code>@darkenedages</code> on <a href="http://twister.net.co">Twister</a>.</li>
-<li>
-<em>[Until we have a decent wiki,]</em> <a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a> 
-contains most "known documentation".</li>
+<li><a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a></li>
+<li>Wiki</li>
 <li>See player list (and some examples of redactions etc.) <a href="https://raw.githubusercontent.com/Knights-of-Redact/DarkenedAges/master/output.txt">here</a>.</li>
 <li>For public moves and gossip, see <a href="https://twisterio.com/search?kw=%23darkenedages">#DarkenedAges</a> on <a href="http://twister.net.co">twister</a>.</li>
+<li>Problems? Questions? DM <code>@darkenedages</code> on <a href="http://twister.net.co">Twister</a>.</li>
 </ul>
 
 <blockquote>
