Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <ul>
 <li><a href="https://github.com/Knights-of-Redact/DarkenedAges/#readme">README</a></li>
-<li>Wiki</li>
+<li><a href="https://github.com/Knights-of-Redact/DarkenedAges/wiki">Wiki</a></li>
 <li>See player list (and some examples of redactions etc.) <a href="https://raw.githubusercontent.com/Knights-of-Redact/DarkenedAges/master/output.txt">here</a>.</li>
 <li>For public moves and gossip, see <a href="https://twisterio.com/search?kw=%23darkenedages">#DarkenedAges</a> on <a href="http://twister.net.co">twister</a>.</li>
 <li>Problems? Questions? DM <code>@darkenedages</code> on <a href="http://twister.net.co">Twister</a>.</li>
