Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h3>
 
 <ul>
-<li>Pull, and you can <a href="https://github.com/Knights-of-Redact/DarkenedAges#unredacting-a-message">run</a>
-<code>./unredact.py</code> without arguments for a summary of your darkive.</li>
-<li>We're in rehearsal mode now, and <a href="https://twisterio.com/post/thedod/1960">this</a> was the first move.</li>
-<li>We've reached critical mass (5 players) \o/</li>
+<li>
+<a href="https://github.com/Knights-of-Redact/DarkenedAges/commit/64c1a14473c6ca13ee41051691a388e501d31219#commitcomment-11784657">Bug fix</a>. <img class="emoji" title=":blush:" alt=":blush:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60a.png" height="20" width="20" align="absmiddle"> Please pull.</li>
 </ul>
 
 <h3>
